# notouchscreen

./: CMakeLists.txt  README  config.cmake  version.cmake
etc/: CMakeLists.txt  ConfigLinux  config.py
src/: CMakeLists.txt  KeyStrokerMain.cpp  Main.cpp  NoTouchScreen.cpp  NoTouchScreen.h  OpenCVLibs.h  Types.h  config.h.cmake
src/action/: Action.cpp  Action.h  ActionManager.cpp  ActionManager.h  KeystrokeAction.cpp  KeystrokeAction.h
src/events/: Event.cpp  Event.h
src/exceptions/: NoTouchScreenException.cpp  NoTouchScreenException.h
src/gestures/: FrameDescriptorBundle.cpp  FrameDescriptorBundle.h  GestureSignature.cpp  GestureSignature.h  RotationDescriptor.cpp  RotationDescriptor.h
src/io/: IoServices.cpp  IoServices.h  KeyStroker.cpp  KeyStroker.h
src/io/linux/: KeyStrokerImpl.cpp  KeyStrokerImpl.h  KeyStrokerLinux.cpp  KeyStrokerLinux.h
src/io/windows/: KeyStrokerImpl.cpp  KeyStrokerImpl.h  KeyStrokerWindows.cpp  KeyStrokerWindows.h
src/models/: Descriptor.cpp  Descriptor.h  ImageFifo.cpp  ImageFifo.h
src/models/descriptors/: CompositeDesc.cpp  CompositeDesc.h
src/python/: PythonModule.cpp  PythonModule.h  PythonWrapper.cpp  PythonWrapper.h
src/templates/: Fifo.cpp  Fifo.hpp
src/utils/: BoostForeach.h  BoostProgramOptions.h  BoostUserConfig.h
